refactor: 유저별 정산 멀티쓰레드 처리로 수정